# python-django-book-management-system

./: .gitignore  README.md  bin  docker-compose.yml  pyproject.toml
book_app/: apps.py  models.py  settings.py  urls.py  views.py
book_app/migrations/: 0001_initial.py
book_app/static/css/: style.css
book_app/templates/: add_book_issue.html  add_new_book.html  add_new_student.html  base.html  edit_books_data.html  edit_inssued.html  edit_student_data.html  index.html  issue_records.html  tst.html  view_books.html  view_students.html
docker/: Dockerfile
