[tool.poetry]
name = "python-django-book-management-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_django_book_management_system"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
